# Umi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW_TASKS.md  SECURITY.md  index.html  paraphrase-generator.html  pyproject.toml  umi.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  ios-build.yml  pages.yml
docs/: _config.yml  architecture.md  index.md
src/umi/: __init__.py  __main__.py  cli.py
tests/: test_umi.py
www/: index.html
www/assets/: index.js
